добавляет иконки соцсетей

--- a/index.html
+++ b/index.html
@@ -101,6 +101,36 @@
                             <h3 class="our-team-name">Игорь Демьяненко</h3>
                         </a>
                         <p class="our-team-position">Product Designer</p>
+                        <ul class="sotial-list list">
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-facebook"></use>
+                                    </svg>   
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </figcaption>
                     </figure>
                 </li>
@@ -114,6 +144,36 @@
                             <h3 class="our-team-name">Ольга Репина</h3>
                         </a>
                         <p class="our-team-position">Frontend Developer</p>
+                        <ul class="sotial-list list">
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-facebook"></use>
+                                    </svg>   
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </figcaption>
                     </figure>
                 </li>
@@ -127,6 +187,36 @@
                             <h3 class="our-team-name">Николай Тарасов</h3>
                         </a>
                         <p class="our-team-position">Marketing</p>
+                        <ul class="sotial-list list">
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-facebook"></use>
+                                    </svg>   
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </figcaption>
                     </figure>
                 </li>
@@ -140,6 +230,36 @@
                             <h3 class="our-team-name">Михаил Ермаков</h3>   
                         </a>
                         <p class="our-team-position">UI Designer</p>
+                        <ul class="sotial-list list">
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-facebook"></use>
+                                    </svg>   
+                                </a>
+                            </li>
+                            <li class="sotial-list-item">
+                                <a href="" class="sotial-list-link">
+                                    <svg class="sotial-list-icon">
+                                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </figcaption>
                     </figure>
                 </li>
