--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="./index.html" class="header-nav-item current link">Студия</a>
                     </li>
                     <li class=" nav-list-item list">
-                        <a href="./portfolio.html" class="header-nav-item link">Портфолио</a>
+                      <a href="./portfolio.html" class="header-nav-item link">Портфолио</a>
                     </li>
                     <li class=" nav-list-item list">
                         <a href="#" class="header-nav-item link">Контакты</a>
@@ -30,8 +30,20 @@
             </nav>
             <address class="address">
                 <ul class="navigation">
-                <li class="nav-list-item list"><a href="info@devstudio.com" class="link mail-item">info@devstudio.com</a></li>
-                <li class="nav-list-item list"><a href="+380961111111" class="link tel-item">+38 096 111 11 11</a></li>
+                <li class="nav-list-item list">
+                    <a href="info@devstudio.com" class="link mail-item">
+                    <svg class="envelope-svg">
+                        <use href="./img/sprite.svg#icon-envelope">
+                        </use>
+                    </svg>
+                    info@devstudio.com</a>
+                </li>
+                <li class="nav-list-item list">
+                    <a href="+380961111111" class="link tel-item">
+                        <svg class="smartphone-svg">
+                            <use href="./img/sprite.svg#icon-smartphone"></use>
+                            </use>
+                        </svg>+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
@@ -49,20 +61,41 @@
             <div class="container">
              <ul class="features">
                 <li class="features-item list">
+                    <figure class="svg-features">
+                    <svg class="features-svg"><use href="./img/sprite.svg#icon-antenna"></use></svg>
+                    </figure>
+                    <figcaption>
                     <p class="features-title">Внимание к деталям</p>
                     <span class="features-title-item">Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+                    </figcaption>
                 </li>
                 <li class="features-item list">
+                    <figure class="svg-features">
+                       <svg class="features-svg"><use href="./img/sprite.svg#icon-clock"></use></svg> 
+                    </figure>
+                    <figcaption>
                     <p class="features-title">Пунктуальность</p>
                     <span class="features-title-item">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
+                    </figcaption>
                 </li>
                 <li class="features-item list">
-                    <p class="features-title">Планирование</p>
-                    <span class="features-title-item">Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+                    <figure class="svg-features">
+                        <svg class="features-svg"><use href="./img/sprite.svg#icon-diagram"></use></svg>
+                    </figure>
+                    <figcaption>
+                        <p class="features-title">Планирование</p>
+                        <span class="features-title-item">Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+                    </figcaption>
+                    
                 </li>
                 <li class="features-item list">
+                    <figure class="svg-features">
+                    <svg class="features-svg"><use href="./img/sprite.svg#icon-astronaut"></use></svg>
+                    </figure>
+                    <figcaption>
                     <p class="features-title">Современные технологии</p>
                     <span class="features-title-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+                    </figcaption>
                 </li>
             </ul>               
             </div>
@@ -266,21 +299,106 @@
             </ul>
             </div>
         </section>
+        <!--CLIENTS-->
+        <section class="clients">
+            <div class="container">
+            <h2 class="our-clients-title">Постоянные клиенты</h2>
+            <ul class="our-clients list">
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-1">
+                            <use href="./img/strike.svg#icon-logo-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-2">
+                            <use href="./img/strike.svg#icon-logo-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-3">
+                            <use href="./img/strike.svg#icon-logo-3"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-4">
+                            <use href="./img/strike.svg#icon-logo-4"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-5">
+                            <use href="./img/strike.svg#icon-logo-5"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="our-clients-list">
+                    <a href="" class="our-clients-link link">
+                        <svg class="our-clients-logo-6">
+                            <use href="./img/strike.svg#icon-logo-6"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
-        <address>
-            <ul>
-                <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
-                </li>
-                <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container footer-box">
+            <div>
+                <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
+            <address>
+                <ul>
+                    <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
+                    </li>
+                    <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address> 
+            </div>
+            <div class="sotial-list-footer">
+                <p class="sotial-list-footer-title">Присоединяйтесь</p>
+                <ul class="sotial-list-f list">
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-facebook"></use>
+                            </svg>   
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            
         </div>
     </footer>
 </body>
