--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,20 @@
             </nav>
             <address class="address">
                 <ul class="navigation">
-                <li class="nav-list-item list"><a href="info@devstudio.com" class="mail-item link">info@devstudio.com</a></li>
-                <li class="nav-list-item list"><a href="+380961111111" class="tel-item link">+38 096 111 11 11</a></li>
+                <li class="nav-list-item list">
+                    <a href="info@devstudio.com" class="link mail-item">
+                    <svg class="envelope-svg">
+                        <use href="./img/sprite.svg#icon-envelope">
+                        </use>
+                    </svg>
+                    info@devstudio.com</a>
+                </li>
+                <li class="nav-list-item list">
+                    <a href="+380961111111" class="link tel-item">
+                        <svg class="smartphone-svg">
+                            <use href="./img/sprite.svg#icon-smartphone"></use>
+                            </use>
+                        </svg>+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
@@ -185,18 +197,54 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
-        <address>
-            <ul>
-                <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
-                </li>
-                <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container footer-box">
+            <div>
+                <a href="/" class="logo link"><span class="logo-item link">Web</span><span class="logo-footer">Studio</span></a>
+            <address>
+                <ul>
+                    <li class="footer-item list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="footer-item list"><a href="info@example.com" class="footer-mail link">info@example.com</a>
+                    </li>
+                    <li class="footer-item list"><a href="+380991111111" class="footer-tel link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address> 
+            </div>
+            <div class="sotial-list-footer">
+                <p class="sotial-list-footer-title">Присоединяйтесь</p>
+                <ul class="sotial-list-f list">
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-facebook"></use>
+                            </svg>   
+                        </a>
+                    </li>
+                    <li class="sotial-list-item-f">
+                        <a href="" class="sotial-list-link-f">
+                            <svg class="sotial-list-icon-f">
+                                <use href="./img/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            
         </div>
     </footer>
 </body>
